syntax = "proto3";

package simple_proto;

option go_package = "github.com/carousell/Orion/example/simple/simple_proto";

service SimpleService{
    rpc Echo (EchoRequest) returns (EchoResponse){
    }
}

message EchoRequest {
    string msg = 1;
}

message EchoResponse {
    string msg = 1;
}
